swagger, redis db hosts
