# app/Http/Requests/PostUserProfileRequest.php
@@ -6,6 +6,40 @@ use Pearl\RequestValidate\RequestAbstract;
 
 class PostUserProfileRequest extends RequestAbstract
 {
+    /**
+     * @OA\Post (
+     *     path="/api/v1/user/profile",
+     *     summary = "Create user profile",
+     *     operationId="user.profile.create",
+     *     tags={"User"},
+     *     security={ {"bearer": {} }},
+     *       @OA\RequestBody(
+     *       required=true,
+     *       @OA\MediaType(
+     *         mediaType="application/json",
+     *         @OA\Schema(
+     *           @OA\Property(
+     *             property="user",
+     *             description="User object with info",
+     *             type="string",
+     *             example={"first_name": "Asik", "last_name": "Asik", "email": "asikn@gmail.com"}
+     *           ),
+     *           @OA\Property(
+     *             property="profile",
+     *             description="User profile object with info",
+     *             type="string",
+     *             example={"gender_id": 1, "birth_date": "01-01-2000"}
+     *           ),
+     *         ),
+     *       ),
+     *     ),
+     *     @OA\Response(
+     *         response="201",
+     *         description="New User",
+     *     )
+     * )
+     *
+     */
     public function rules() {
         return [
             "user.first_name"   => "required|string",
